main menu on mobile 767px issue
Correct the view of <li> elements in viewport of 767px

--- a/css/arkusz.css
+++ b/css/arkusz.css
@@ -86,7 +86,7 @@ h2 {
 		height:50px;
 	}
 }
-@media (max-width: 767px) {
+@media (max-width: 767.5px) {
 	.navbar {
 		opacity: 1;
 	}
@@ -108,7 +108,7 @@ h2 {
 	padding-left: 20px;
 	text-align: center;
 }
-@media (min-width: 740px) and (max-width: 1200px) {
+@media (min-width: 768px) and (max-width: 1200px) {
 	.navbar-default .navbar-nav li a {
 	padding-left: 10px;
 }
@@ -125,6 +125,14 @@ h2 {
 			line-height: 20px;
 	}
 }
+@media(max-width: 768px) {
+	.headerTarget::before {
+  		content:"";
+  		display:block;
+  		height:500px; /* fixed header height*/
+  		margin:-500px 0 0; /* negative fixed header height */
+	}
+}
 @media(min-width: 768px) and (max-width: 1198px) {
 	.headerAnchor span {
 		display: block;
@@ -137,6 +145,15 @@ a#brand:hover {
 .navbar-default .navbar-nav > li > a:hover {
 	color: #fff;
 	text-shadow: -5px -5px 5px #000;
+}
+@media(max-width: 768px) {
+	.navbar-nav {
+		margin: 7.5px 0;
+	}
+	.navbar-collapse {
+		padding-left: 0;
+		padding-right: 0;
+	}
 }
 .navbar-nav li {
 	width: 14.28%;
@@ -155,7 +172,7 @@ a#brand:hover {
 	}
 }
 
-@media (max-width: 767px) {
+@media (max-width: 767.5px) {
 	.navbar-nav li {
 		max-width: 100%;
 		width: 100%;
@@ -283,5 +300,4 @@ p.italic {
 
 #experience, #data, #portfolio {
 	margin-bottom: 50px;
-
 }
